fix card jumping

--- a/css/index.beer-carousel.css
+++ b/css/index.beer-carousel.css
@@ -117,6 +117,9 @@
             display: flex;
             flex-direction: row;
             align-items: stretch;
+            min-height: 575px;
+            max-height: 700px;
+            height: 100%;
             /* justify-content: center; */
 
             .beer-carousel__card {
